Fix text displayer positioning on IE
Before, the text displayer on IE was positioned outside of the video
container, to the right.  On IE, the left property was defaulting to
something surprising.  The simple fix is to specify left: 0.

--- a/ui/less/containers.less
+++ b/ui/less/containers.less
@@ -188,7 +188,8 @@
 
 .shaka-text-container {
   bottom: 15%;
-  top: 0%;
+  top: 0;
+  left: 0;
   width: 100%;
   min-width: 48px;
 
